# skyekiwi-network

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.build  README.md  package.json  rust-toolchain
crates/near-contract-standards/: Cargo.toml
crates/near-contract-standards/src/fungible_token/: core.rs  core_impl.rs  macros.rs  metadata.rs  receiver.rs  resolver.rs  storage_impl.rs
crates/near-contract-standards/src/non_fungible_token/: macros.rs  metadata.rs  token.rs  utils.rs
crates/near-contract-standards/src/storage_management/: mod.rs
crates/near-contract-standards/src/upgrade/: mod.rs
crates/skw-blockchain-node/: Cargo.toml
crates/skw-blockchain-node/res/: alphaRaw.json
crates/skw-blockchain-node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  rpc.rs  service.rs
crates/skw-blockchain-runtime/: Cargo.toml
crates/skw-blockchain-runtime/src/: lib.rs
crates/skw-contract-macros/: Cargo.toml
crates/skw-contract-macros/src/: lib.rs
crates/skw-contract-sdk/: Cargo.toml
crates/skw-contract-sdk/compilation_tests/: all.rs  bad_argument.stderr  complex.rs  cond_compilation.rs  impl_generic.rs  init_function.rs  init_ignore_state.rs  invalid_arg_pat.rs  invalid_arg_pat.stderr  metadata.rs  metadata_invalid_rust.rs  metadata_invalid_rust.stderr  payable_view.rs  private.rs  references.rs  regular.rs  trait_impl.rs
crates/skw-contract-sdk/examples/: test_all.sh
crates/skw-contract-sdk/examples/callback-results/: Cargo.toml
crates/skw-contract-sdk/examples/cross-contract-high-level/: Cargo.toml
crates/skw-contract-sdk/examples/cross-contract-low-level/: Cargo.toml
crates/skw-contract-sdk/examples/fungible-token/: Cargo.toml
crates/skw-contract-sdk/examples/lockable-fungible-token/: Cargo.toml
crates/skw-contract-sdk/examples/mission-control/: Cargo.toml
crates/skw-contract-sdk/examples/non-fungible-token/: Cargo.toml
crates/skw-contract-sdk/examples/status-message/: Cargo.toml
crates/skw-contract-sdk/examples/status-message-collections/: Cargo.toml
crates/skw-contract-sdk/examples/test-contract/: Cargo.toml
crates/skw-contract-sdk/src/: lib.rs  promise.rs
crates/skw-contract-sdk/src/collections/: mod.rs
crates/skw-contract-sdk/src/environment/: env.rs
crates/skw-contract-sdk/src/json_types/: hash.rs  mod.rs
crates/skw-contract-sdk/src/test_utils/: context.rs  mod.rs  test_env.rs
crates/skw-contract-sdk/src/types/: account_id.rs  mod.rs  primitives.rs  public_key.rs  vm_types.rs
crates/skw-contract-sdk/src/utils/: mod.rs  storage_key_impl.rs
crates/skw-contract-sdk/tests/: code_size.rs
crates/skw-contract-sim/: Cargo.toml  README.md
crates/skw-contract-sim/src/: lib.rs  outcome.rs  runtime.rs  user.rs
crates/skw-contract-sys/: Cargo.toml
crates/skw-contract-sys/src/: lib.rs
crates/skw-myers-diff/: Cargo.toml
crates/skw-myers-diff/src/: bench.rs  lib.rs  myers.rs  parse.rs  types.rs
crates/skw-sgx-crypto/: Cargo.toml
crates/skw-sgx-driver/: Cargo.toml
crates/skw-sgx-driver/src/: crypto.rs  file.rs  lib.rs  metadata.rs  types.rs
crates/skw-sgx-driver/src/test/: crypto.rs  file.rs  metadata.rs  utils.rs
crates/skw-sgx-file/: Cargo.toml
crates/skw-sgx-ipfs/: Cargo.toml
crates/skw-sgx-ipfs/mock/: test
crates/skw-sgx-ipfs/src/: lib.rs
crates/skw-sgx-metadata/: Cargo.toml
crates/skw-sgx-metadata/src/: lib.rs
crates/skw-sgx-unit-test/: Cargo.toml
crates/skw-sgx-unit-test/src/: crypto.rs  file.rs  lib.rs  utils.rs
crates/skw-vm-genesis-configs/: Cargo.toml
crates/skw-vm-genesis-configs/src/: genesis_config.rs  genesis_validate.rs  lib.rs
crates/skw-vm-host/: Cargo.toml  README.md
crates/skw-vm-host/src/: context.rs  dependencies.rs  externals.rs  imports.rs  lib.rs  logic.rs  types.rs  utils.rs
crates/skw-vm-host/src/mocks/: mock_external.rs
crates/skw-vm-host/tests/: fixtures.rs  helpers.rs  test_context.rs  test_gas_counter.rs  test_miscs.rs  test_promises.rs  test_registers.rs  test_storage_read_write.rs  test_view_method.rs  vm_logic_builder.rs
crates/skw-vm-interface/: Cargo.toml  README.md  Rocket.toml
crates/skw-vm-interface/src/: _main.rs  call.rs  lib.rs  main.rs  outcome.rs  runtime.rs  scripts.rs  user.rs  utils.rs
crates/skw-vm-interface/tests/: load_states.rs
crates/skw-vm-patch/: Cargo.toml  README.md
crates/skw-vm-patch/src/: main.rs
crates/skw-vm-pool/: Cargo.toml
crates/skw-vm-pool/src/: lib.rs  metrics.rs  types.rs
crates/skw-vm-primitives/: Cargo.toml
crates/skw-vm-primitives/src/: account.rs  account_id.rs  apply_state.rs  challenge.rs  config.rs  db_key.rs  errors.rs  fees.rs  lib.rs  profile.rs  receipt.rs  state_record.rs  test_utils.rs  transaction.rs  trie_key.rs  utils.rs  version.rs  views.rs
crates/skw-vm-primitives/src/crypto/: hash.rs  key_conversion.rs  key_file.rs  mod.rs  randomness.rs  signature.rs  signer.rs  test_utils.rs  vrf.rs
crates/skw-vm-runtime/: Cargo.toml
crates/skw-vm-runtime/src/: _metrics.rs  actions.rs  adapter.rs  balance_checker.rs  cache.rs  config.rs  ext.rs  genesis.rs  lib.rs  verifier.rs
crates/skw-vm-runtime/src/state_viewer/: errors.rs  mod.rs
crates/skw-vm-runtime/tests/: test_async_calls.rs
crates/skw-vm-runtime/tests/runtime_group_tools/: mod.rs  random_config.rs
crates/skw-vm-store/: Cargo.toml
crates/skw-vm-store/benches/: store_bench.rs  trie_bench.rs
crates/skw-vm-store/src/: db.rs  lib.rs  refcount.rs  test_utils.rs
crates/skw-vm-store/src/trie/: insert_delete.rs  (+8 more)
enclave/app/: Cargo.toml
enclave/app/src/: main.rs
enclave/enclave/: Cargo.toml  Makefile
enclave/enclave/src/: lib.rs
enclave/skw-sgx-enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
enclave/skw-sgx-enclave/src/: lib.rs
enclave/skw-sgx-host/: Cargo.toml  build.rs
enclave/skw-sgx-host/src/: driver.rs  encryption_schema.rs  main.rs  sys.rs  utils.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
skw-node/: Cargo.toml
skw-node/src/: chain_spec.rs  command.rs  service.rs
skw-runtime/: Cargo.toml
skw-runtime/src/: lib.rs
(+413 files in other folders)
