[workspace]
members = [
    # blockchain 
    'crates/skw-blockchain-node',
    'crates/skw-blockchain-pallets/pallet-secrets',
    'crates/skw-blockchain-pallets/pallet-s-contract',
    'crates/skw-blockchain-pallets/pallet-registry',
    'crates/skw-blockchain-pallets/pallet-parentchain',
    'crates/skw-blockchain-pallets/pallet-s-account',
    'crates/skw-blockchain-runtime',
    'crates/skw-blockchain-pallets/primitives',

    # SkyeKiwi VM based on NEAR VM
    'crates/skw-vm-primitives',
    'crates/skw-vm-host',
    'crates/skw-vm-engine',
    'crates/skw-vm-engine-cli',
    'crates/skw-vm-runtime',
    'crates/skw-vm-pool',
    'crates/near-test-contracts',
    'crates/skw-vm-store',
    'crates/skw-vm-interface',

    # SkyeKiwi VM contract sdk based on near-sdk-rs
    'crates/skw-contract-sdk',
    'crates/skw-contract-macros',
    'crates/skw-contract-sys',

    # a Myers Diff algo impl
    'crates/skw-myers-diff',
    'crates/skw-vm-patch',

    # sgx enclave host
    'crates/skw-sgx-ipfs',
]

exclude = [
    'teaclave-sgx-sdk',

    # SkyeKiwi Protocol in Intel SGX enclave
    'crates/skw-sgx-protocol',
    'enclave/skw-sgx-host',
    'enclave/skw-sgx-enclave',

    "crates/near-contract-standards",
    'crates/skw-blockchain-pallets-unused/pallet-naming',

]
[profile.release]
panic = 'unwind'
