[package]
name = "near-contract-standards"
version = "4.0.0-pre.5"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
license = "GPL-3.0"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://near-sdk.io"
documentation = "https://docs.rs/near-contract-standards"
description = """
NEAR smart contracts standard library.
"""

[dependencies]
skw-contract-sdk = { path = "../skw-contract-sdk" }
